src/Hix/Language/Hal/Generated/HalParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from HalParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Hix.Hal.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class HalParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SECTION=1, PERCENT=2, AMP=3, HASH=4, EQUALS=5, COMMA=6, LBRACE=7, RBRACE=8,
		LBRACKET=9, RBRACKET=10, LPAREN=11, RPAREN=12, LANGLE=13, RANGLE=14, TRUE=15,
		FALSE=16, NULL=17, NUMBER=18, STRING=19, IDENTIFIER=20, BARE=21, LINE_COMMENT=22,
		NEWLINE=23, SPACE=24, ERROR_TOKEN=25;
	public const int
		RULE_document = 0, RULE_sectionBlock = 1, RULE_metadata = 2, RULE_metadataArguments = 3,
		RULE_metadataArgument = 4, RULE_section = 5, RULE_sectionEntry = 6, RULE_field = 7,
		RULE_fieldKey = 8, RULE_value = 9, RULE_typedContainer = 10, RULE_table = 11,
		RULE_tableEntry = 12, RULE_list = 13, RULE_collectionValue = 14, RULE_call = 15,
		RULE_argumentList = 16, RULE_argument = 17, RULE_selection = 18, RULE_looseScalar = 19,
		RULE_scalarAtom = 20, RULE_lineEnd = 21, RULE_newlines = 22;
	public static readonly string[] ruleNames = {
		"document", "sectionBlock", "metadata", "metadataArguments", "metadataArgument",
		"section", "sectionEntry", "field", "fieldKey", "value", "typedContainer",
		"table", "tableEntry", "list", "collectionValue", "call", "argumentList",
		"argument", "selection", "looseScalar", "scalarAtom", "lineEnd", "newlines"
	};

	private static readonly string[] _LiteralNames = {
		null, "'---'", "'%'", "'&'", "'#'", "'='", "','", "'{'", "'}'", "'['",
		"']'", "'('", "')'", "'<'", "'>'", "'true'", "'false'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SECTION", "PERCENT", "AMP", "HASH", "EQUALS", "COMMA", "LBRACE",
		"RBRACE", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", "LANGLE", "RANGLE",
		"TRUE", "FALSE", "NULL", "NUMBER", "STRING", "IDENTIFIER", "BARE", "LINE_COMMENT",
		"NEWLINE", "SPACE", "ERROR_TOKEN"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "HalParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static HalParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public HalParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public HalParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DocumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NewlinesContext[] newlines() {
			return GetRuleContexts<NewlinesContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NewlinesContext newlines(int i) {
			return GetRuleContext<NewlinesContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SectionBlockContext[] sectionBlock() {
			return GetRuleContexts<SectionBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SectionBlockContext sectionBlock(int i) {
			return GetRuleContext<SectionBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(HalParser.Eof, 0); }
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHalParserVisitor<TResult> typedVisitor = visitor as IHalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(Context, State);
		EnterRule(_localctx, 0, RULE_document);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 46;
			newlines();
			State = 47;
			sectionBlock();
			State = 53;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 48;
					newlines();
					State = 49;
					sectionBlock();
					}
					}
				}
				State = 55;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 56;
			newlines();
			State = 57;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SectionBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SectionContext section() {
			return GetRuleContext<SectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MetadataContext[] metadata() {
			return GetRuleContexts<MetadataContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MetadataContext metadata(int i) {
			return GetRuleContext<MetadataContext>(i);
		}
		public SectionBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sectionBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHalParserVisitor<TResult> typedVisitor = visitor as IHalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSectionBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SectionBlockContext sectionBlock() {
		SectionBlockContext _localctx = new SectionBlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_sectionBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PERCENT) {
				{
				{
				State = 59;
				metadata();
				}
				}
				State = 64;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 65;
			section();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MetadataContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PERCENT() { return GetToken(HalParser.PERCENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(HalParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NewlinesContext newlines() {
			return GetRuleContext<NewlinesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MetadataArgumentsContext metadataArguments() {
			return GetRuleContext<MetadataArgumentsContext>(0);
		}
		public MetadataContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_metadata; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHalParserVisitor<TResult> typedVisitor = visitor as IHalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMetadata(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MetadataContext metadata() {
		MetadataContext _localctx = new MetadataContext(Context, State);
		EnterRule(_localctx, 4, RULE_metadata);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			Match(PERCENT);
			State = 68;
			Match(IDENTIFIER);
			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LPAREN || _la==LANGLE) {
				{
				State = 69;
				metadataArguments();
				}
			}

			State = 72;
			newlines();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MetadataArgumentsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LANGLE() { return GetToken(HalParser.LANGLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RANGLE() { return GetToken(HalParser.RANGLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MetadataArgumentContext[] metadataArgument() {
			return GetRuleContexts<MetadataArgumentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MetadataArgumentContext metadataArgument(int i) {
			return GetRuleContext<MetadataArgumentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(HalParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(HalParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentListContext argumentList() {
			return GetRuleContext<ArgumentListContext>(0);
		}
		public MetadataArgumentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_metadataArguments; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHalParserVisitor<TResult> typedVisitor = visitor as IHalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMetadataArguments(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MetadataArgumentsContext metadataArguments() {
		MetadataArgumentsContext _localctx = new MetadataArgumentsContext(Context, State);
		EnterRule(_localctx, 6, RULE_metadataArguments);
		int _la;
		try {
			State = 87;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LANGLE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74;
				Match(LANGLE);
				State = 78;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4161660L) != 0)) {
					{
					{
					State = 75;
					metadataArgument();
					}
					}
					State = 80;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 81;
				Match(RANGLE);
				}
				break;
			case LPAREN:
				EnterOuterAlt(_localctx, 2);
				{
				State = 82;
				Match(LPAREN);
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4162176L) != 0)) {
					{
					State = 83;
					argumentList();
					}
				}

				State = 86;
				Match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MetadataArgumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ScalarAtomContext scalarAtom() {
			return GetRuleContext<ScalarAtomContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(HalParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(HalParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HASH() { return GetToken(HalParser.HASH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AMP() { return GetToken(HalParser.AMP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PERCENT() { return GetToken(HalParser.PERCENT, 0); }
		public MetadataArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_metadataArgument; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHalParserVisitor<TResult> typedVisitor = visitor as IHalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMetadataArgument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MetadataArgumentContext metadataArgument() {
		MetadataArgumentContext _localctx = new MetadataArgumentContext(Context, State);
		EnterRule(_localctx, 8, RULE_metadataArgument);
		try {
			State = 95;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case TRUE:
			case FALSE:
			case NULL:
			case NUMBER:
			case STRING:
			case IDENTIFIER:
			case BARE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 89;
				scalarAtom();
				}
				break;
			case COMMA:
				EnterOuterAlt(_localctx, 2);
				{
				State = 90;
				Match(COMMA);
				}
				break;
			case EQUALS:
				EnterOuterAlt(_localctx, 3);
				{
				State = 91;
				Match(EQUALS);
				}
				break;
			case HASH:
				EnterOuterAlt(_localctx, 4);
				{
				State = 92;
				Match(HASH);
				}
				break;
			case AMP:
				EnterOuterAlt(_localctx, 5);
				{
				State = 93;
				Match(AMP);
				}
				break;
			case PERCENT:
				EnterOuterAlt(_localctx, 6);
				{
				State = 94;
				Match(PERCENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SECTION() { return GetToken(HalParser.SECTION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(HalParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LineEndContext lineEnd() {
			return GetRuleContext<LineEndContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AMP() { return GetToken(HalParser.AMP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ScalarAtomContext scalarAtom() {
			return GetRuleContext<ScalarAtomContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SectionEntryContext[] sectionEntry() {
			return GetRuleContexts<SectionEntryContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SectionEntryContext sectionEntry(int i) {
			return GetRuleContext<SectionEntryContext>(i);
		}
		public SectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_section; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHalParserVisitor<TResult> typedVisitor = visitor as IHalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SectionContext section() {
		SectionContext _localctx = new SectionContext(Context, State);
		EnterRule(_localctx, 10, RULE_section);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			Match(SECTION);
			State = 98;
			Match(IDENTIFIER);
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AMP) {
				{
				State = 99;
				Match(AMP);
				State = 100;
				scalarAtom();
				}
			}

			State = 103;
			lineEnd();
			State = 107;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 104;
					sectionEntry();
					}
					}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SectionEntryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MetadataContext[] metadata() {
			return GetRuleContexts<MetadataContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MetadataContext metadata(int i) {
			return GetRuleContext<MetadataContext>(i);
		}
		public SectionEntryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sectionEntry; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHalParserVisitor<TResult> typedVisitor = visitor as IHalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSectionEntry(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SectionEntryContext sectionEntry() {
		SectionEntryContext _localctx = new SectionEntryContext(Context, State);
		EnterRule(_localctx, 12, RULE_sectionEntry);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PERCENT) {
				{
				{
				State = 110;
				metadata();
				}
				}
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 116;
			field();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FieldKeyContext fieldKey() {
			return GetRuleContext<FieldKeyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineEndContext lineEnd() {
			return GetRuleContext<LineEndContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(HalParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CollectionValueContext collectionValue() {
			return GetRuleContext<CollectionValueContext>(0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_field; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHalParserVisitor<TResult> typedVisitor = visitor as IHalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitField(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FieldContext field() {
		FieldContext _localctx = new FieldContext(Context, State);
		EnterRule(_localctx, 14, RULE_field);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			fieldKey();
			State = 122;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case EQUALS:
				{
				State = 119;
				Match(EQUALS);
				State = 120;
				value();
				}
				break;
			case LBRACE:
			case LBRACKET:
			case IDENTIFIER:
				{
				State = 121;
				collectionValue();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 124;
			lineEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldKeyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(HalParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(HalParser.STRING, 0); }
		public FieldKeyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fieldKey; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHalParserVisitor<TResult> typedVisitor = visitor as IHalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFieldKey(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FieldKeyContext fieldKey() {
		FieldKeyContext _localctx = new FieldKeyContext(Context, State);
		EnterRule(_localctx, 16, RULE_fieldKey);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			_la = TokenStream.LA(1);
			if ( !(_la==STRING || _la==IDENTIFIER) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(HalParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypedContainerContext typedContainer() {
			return GetRuleContext<TypedContainerContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectionContext[] selection() {
			return GetRuleContexts<SelectionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectionContext selection(int i) {
			return GetRuleContext<SelectionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CallContext call() {
			return GetRuleContext<CallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TableContext table() {
			return GetRuleContext<TableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListContext list() {
			return GetRuleContext<ListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LooseScalarContext looseScalar() {
			return GetRuleContext<LooseScalarContext>(0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHalParserVisitor<TResult> typedVisitor = visitor as IHalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(Context, State);
		EnterRule(_localctx, 18, RULE_value);
		int _la;
		try {
			State = 164;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,16,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 128;
				Match(IDENTIFIER);
				State = 129;
				typedContainer();
				State = 133;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==HASH) {
					{
					{
					State = 130;
					selection();
					}
					}
					State = 135;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 136;
				call();
				State = 140;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==HASH) {
					{
					{
					State = 137;
					selection();
					}
					}
					State = 142;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 143;
				table();
				State = 147;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==HASH) {
					{
					{
					State = 144;
					selection();
					}
					}
					State = 149;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 150;
				list();
				State = 154;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==HASH) {
					{
					{
					State = 151;
					selection();
					}
					}
					State = 156;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 157;
				looseScalar();
				State = 161;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==HASH) {
					{
					{
					State = 158;
					selection();
					}
					}
					State = 163;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypedContainerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TableContext table() {
			return GetRuleContext<TableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListContext list() {
			return GetRuleContext<ListContext>(0);
		}
		public TypedContainerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typedContainer; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHalParserVisitor<TResult> typedVisitor = visitor as IHalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypedContainer(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypedContainerContext typedContainer() {
		TypedContainerContext _localctx = new TypedContainerContext(Context, State);
		EnterRule(_localctx, 20, RULE_typedContainer);
		try {
			State = 168;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LBRACE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 166;
				table();
				}
				break;
			case LBRACKET:
				EnterOuterAlt(_localctx, 2);
				{
				State = 167;
				list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
